<resources>
    <string name="app_name" translatable="false">iDSReversiApp</string>
    <string name="start">Start</string>
    <string name="config">Server Config</string>
    <string name="title">Reversi App from iDS</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="done">Done</string>
    <string name="test">test</string>
    <string name="black_start">Black</string>
    <string name="white_start">White</string>
    <string name="turn">\'s Turn</string>
    <string name="you" translatable="false">YOU</string>
    <string name="cpu" translatable="false">CPU</string>
    <string name="game_finished">Game Finished!</string>
    <string name="result_stone">Black: %1$d, White: %2$d</string>
    <string name="pass">Pass!</string>
    <string name="cannot_place_there">Cannot place there!</string>
    <string name="connection_failed">Connection Failed!</string>
    <string name="question_reconnect">Do you want to retry?</string>
    <string name="yes">YES</string>
    <string name="finish">Finish</string>
    <string name="cpu_puts_at">CPU puts at (%1$d, %2$d)</string>
    <string name="loading">Loading…</string>
</resources>